# smarthome

./: .gitignore  README.md  README_tree_parser.md  TODO.md  __main__.py  debug_split.py  default.nix  main.py  merger.py  parser.py  prompt.md  prompt_draft.md  pyproject.toml  read_waveplus.nix  read_waveplus.py  test_merge.py  utils.py
vulnerabilities/: CODE_FLOW.md  FLOW.md  README.md  TODO.md  __init__.py  app.py  code-flow.dot  database.py  database_storage.py  default.nix  generate_dependency_graph.py  interfaces.py  merger.py  mock_derivation.py  mock_vulnix.py  mock_why_depends.py  normalizer.py  pyproject.toml  scanner.py  test_app.py  test_database.py  test_interfaces.py  test_merger.py  test_mock_derivation.py  test_normalizer.py  test_scanner.py
vulnerabilities/app/: __main__.py  app.py
vulnerabilities/core/: database.py  database_storage.py  formatter.py  merger.py  normalizer.py  orchestrator.py  parser.py  scanner.py
vulnerabilities/interfaces/: Derivation.py  TreeFormatter.py  TreeMerger.py  TreeNodeDict.py  TreeOrchestrator.py  TreeParser.py  __init__.py  interfaces.py
vulnerabilities/mock/: mock_derivation.py  mock_vulnix.py  mock_why_depends.py
vulnerabilities/tests/: test_app.py  test_core_TestFormatter.py  test_core_TestMerger.py  test_core_TestOrchestrator.py  test_core_TestParser.py  test_database.py  test_interfaces.py  test_merger.py  test_mock_derivation.py  test_normalizer.py  test_scanner.py
vulnerabilities/tree_parser/: __init__.py  __main__.py  debug_scenario.py  test_complex_tree.py  test_merge.py  test_parser_wrapper.py
(+45 files in other folders)
